--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -56,6 +56,7 @@
                     <td>
                     {{ if $.IsOperator }}
                         <a href="/t/{{.TournamentID}}/edit">Edit</a>
+                        <a href="/create/tournament?template={{.TournamentID}}">Copy</a>
                         <a href="#" class="delete-btn" onclick="confirmDeleteTournament('{{.TournamentID}}', '{{.TournamentName}}'); return false;">Delete</a>
                     {{ else }}
                     &nbsp;
