--- a/assets/templates/manage-structures.html.tmpl
+++ b/assets/templates/manage-structures.html.tmpl
@@ -40,7 +40,7 @@
                     <td>
                         <a href="/manage/structure/{{ $s.ID }}/edit">Edit</a>
                         <a href="/create/structure?template={{ $s.ID }}">Copy</a>
-                        <a href="#" style="color:#f88;" onclick="showDeleteModal('{{ $s.Name }}', {{ $s.ID }})">Delete</a>
+                        <a href="#" style="color:#f88;" onclick="showDeleteModal('{{ $s.Name }}', {{ $s.ID }})">❌</a>
                     </td>
                 </tr>
                 {{ end }}
