Add rudimentary theme support.
Plus the mute mode now has a bouncing ball feature so I will
remember that it is muted.

--- a/assets/templates/edit-own-account.html.tmpl
+++ b/assets/templates/edit-own-account.html.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Edit Account</title>
-    <link rel="stylesheet" href="/fs/{{ .Theme }}-style.css">
+    <link rel="stylesheet" href="/style/{{ .Theme }}/css">
 </head>
 <body>
     {{ template "user-bar" . }}
