--- a/assets/templates/edit-tournament.html.tmpl
+++ b/assets/templates/edit-tournament.html.tmpl
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>{{ if .IsNew }}Create{{ else }}Edit{{ end }} Tournament</title>
-    <link rel="stylesheet" href="/fs/{{ .SiteConfig.Theme }}-style.css">
+    <link rel="stylesheet" href="/style/{{ .SiteConfig.Theme }}/css">
 </head>
 
 <body>
