--- a/assets/templates/manage-footer-sets.html.tmpl
+++ b/assets/templates/manage-footer-sets.html.tmpl
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Manage Footer Plug Sets</title>
-    <link rel="stylesheet" href="/fs/irata-style.css">
+    <link rel="stylesheet" href="/style/{{ .Theme }}/css">
 </head>
 <body>
     {{ template "user-bar" . }}
