TODO -> TODONE, the mute icon bounces for no reason.

--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -9,11 +9,7 @@
   </head>
   
   <body class="clock-page">
-    <div id="mute-bouncer" class="mute-bouncer">
-    <!-- TODO: Make this in a different layer and bounce around the screen like
-         the DVD screensaver of yore. -->
-      🔇
-    </div>
+    <div id="mute-bouncer" class="mute-bouncer">🔇</div>
     <table class="clock-full-height">
       <tbody>
       <tr>
