--- a/assets/fs/irata-style.css
+++ b/assets/fs/irata-style.css
@@ -88,6 +88,61 @@ label {
     border-color: #aaa;
 }
 
+.motd {
+    margin: 2em 0;
+    padding: 1em;
+    border-width: 1px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #aaa;
+    background: #111;
+}
+
+.motd h1, .motd h2, .motd h3 {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.motd p {
+    margin: 0.5em 0;
+}
+
+.motd ul, .motd ol {
+    margin: 0.5em 0;
+    padding-left: 2em;
+}
+
+.motd ul {
+    list-style-type: disc;
+}
+
+.motd ol {
+    list-style-type: decimal;
+}
+
+.motd a {
+    color: #5bf;
+}
+
+.motd code {
+    background: #222;
+    padding: 0.2em 0.4em;
+    border-radius: 3px;
+    font-family: monospace;
+}
+
+.motd pre {
+    background: #222;
+    padding: 1em;
+    border-radius: 4px;
+    overflow-x: auto;
+}
+
+.motd pre code {
+    background: transparent;
+    padding: 0;
+}
+
 .form-group {
     margin-bottom: 1.5em;
 }
