--- a/assets/templates/manage-footer-sets.html.tmpl
+++ b/assets/templates/manage-footer-sets.html.tmpl
@@ -28,7 +28,7 @@
                     <td>{{ .Name }}</td>
                     <td>{{ .Version }}</td>
                     <td>
-                        <a href="/manage/footer-set/{{ .FooterPlugsID }}/edit" class="no-underline" title="Edit">✎</a>
+                        <a href="/manage/footer-set/{{ .FooterPlugsID }}/edit" class="no-underline" title="Edit">✏️</a>
                         <a href="/create/footer-set?template={{ .FooterPlugsID }}" class="no-underline" title="Copy">📋</a>
                         <a href="#" class="no-underline" style="color:#f88;" title="Delete" onclick="showDeleteModal({{-  .FooterPlugsID -}})">❌</a>
                     </td>
