--- a/assets/templates/manage-structures.html.tmpl
+++ b/assets/templates/manage-structures.html.tmpl
@@ -38,7 +38,7 @@
                         </select>
                     </td>
                     <td>
-                        <a href="/manage/structure/{{ $s.ID }}/edit" class="no-underline" title="Edit">✎</a>
+                        <a href="/manage/structure/{{ $s.ID }}/edit" class="no-underline" title="Edit">✏️</a>
                         <a href="/create/structure?template={{ $s.ID }}" class="no-underline" title="Copy">📋</a>
                         <a href="#" class="no-underline" style="color:#f88;" title="Delete" onclick="showDeleteModal('{{ $s.Name }}', {{ $s.ID }})">❌</a>
                     </td>
