--- a/assets/templates/manage-users.html.tmpl
+++ b/assets/templates/manage-users.html.tmpl
@@ -33,7 +33,7 @@
                     <td>{{ if .IsAdmin }}&#x2705;{{ else }}&nbsp;{{ end }}</td>
                     <td>{{ if .IsOperator }}&#x2705;{{ else }}&nbsp;{{ end }}</td>
                     <td>
-                        <a href="/manage/user/{{ .ID }}/edit" class="no-underline" title="Edit">✎</a>
+                        <a href="/manage/user/{{ .ID }}/edit" class="no-underline" title="Edit">✏️</a>
                         <a href="#" class="no-underline" style="color:#f88;" title="Delete" onclick="showDeleteModal('{{ .Nick }}', {{ .ID }})">❌</a>
                     </td>
                 </tr>
