--- a/assets/templates/style.css.tmpl
+++ b/assets/templates/style.css.tmpl
@@ -729,3 +729,45 @@ input[type="submit"]:hover, button:hover {
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+.motd {
+    margin: 2em 0;
+    padding: 1em;
+    border-width: 1px;
+    border-radius: 5px;
+    border-style: solid;
+    border-color: #aaa;
+}
+
+.motd h1, .motd h2, .motd h3 {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
+
+.motd p {
+    margin: 0.5em 0;
+}
+
+.motd ul, .motd ol {
+    margin: 0.5em 0;
+    padding-left: 2em;
+}
+
+.motd code {
+    background: #222;
+    padding: 0.2em 0.4em;
+    border-radius: 3px;
+    font-family: monospace;
+}
+
+.motd pre {
+    background: #222;
+    padding: 1em;
+    border-radius: 4px;
+    overflow-x: auto;
+}
+
+.motd pre code {
+    background: transparent;
+    padding: 0;
+}
