--- a/assets/templates/style.css.tmpl
+++ b/assets/templates/style.css.tmpl
@@ -731,6 +731,7 @@ input[type="submit"]:hover, button:hover {
 }
 
 .motd {
+    font-weight: normal;
     margin: 2em 0;
     padding: 1em;
     border-width: 1px;
