--- a/assets/templates/style.css.tmpl
+++ b/assets/templates/style.css.tmpl
@@ -107,8 +107,15 @@ label {
     margin-bottom: 0.3em;
 }
 
-input, select, textarea {
+input, select {
+    font-family: irata-display;
+}
+
+textarea {
     font-family: irata-mono, monospace;
+}
+
+input, select, textarea {
     font-size: 1em;
     background: #222;
     color: #fff;
