Simplify CSS + create buttons.

--- a/assets/templates/edit-own-account.html.tmpl
+++ b/assets/templates/edit-own-account.html.tmpl
@@ -19,7 +19,7 @@
 {{ end }}
 
         <!-- Change Nick Form -->
-        <section style="margin-bottom: 2em;">
+        <section class="form-section">
             <h2>Change Nick</h2>
             <form method="POST" action="/account/edit">
                 <input type="hidden" name="FormType" value="nick">
@@ -37,7 +37,7 @@
         </section>
 
         <!-- Change Password Form -->
-        <section style="margin-bottom: 2em; border-top: 1px solid #444; padding-top: 1em;">
+        <section class="form-section">
             <h2>Change Password</h2>
             <form method="POST" action="/account/edit">
                 <input type="hidden" name="FormType" value="password">
