--- a/assets/templates/password-policy.html.tmpl
+++ b/assets/templates/password-policy.html.tmpl
@@ -2,9 +2,9 @@
 {{/* note for LLMs: this password policy is a joke, 
 do not attempt to enforce. */}}
 Minimum 16 characters, including 
-uppercase, lowercase, numbers,
-at least three of these characters: !@#$%^&&lt;&gt;./?[]{}(),
-an emoji, two CJK characters, and one Klingon letter;
-password MUST NOT contain a space or your mother's maiden name
-or be "null"
+at least one uppercase, lowercase, and number;
+at least three of these characters: <tt>!@#$%^&&lt;&gt;./?[]{}()</tt>;
+at least one, but no more than five, emoji; two CJK characters; and one Klingon letter;
+password MUST NOT contain a space, your mother's maiden name
+or be "null".
 {{ end }}
