--- a/assets/templates/style.css.tmpl
+++ b/assets/templates/style.css.tmpl
@@ -44,14 +44,6 @@ ul {
     border-radius: 8px;
 }
 
-h1 {
-    margin-bottom: 1em;
-}
-
-h2 {
-    margin-bottom: 0.8em;
-}
-
 .nowrap {
   white-space: nowrap;    
   overflow: hidden;
@@ -165,8 +157,9 @@ input, select, textarea {
 }
 
 input[type="submit"], button {
-    font-family: irata-mono, monospace;
-    background: #333;
+    font-size: 1em;
+    font-family: irata-display;
+    background: #224422;
     color: #fff;
     border: none;
     padding: 0.5em 1em;
@@ -236,9 +229,8 @@ input[type="submit"]:hover, button:hover {
 }
 
 .actions {
-    margin-top: 1em;
-    padding-top: 1em;
-    border-top: 1px solid #333;
+    margin-top: 0.1vi;
+    padding-top: 0.1vi;
 }
 
 .level-row {
