--- a/assets/templates/manage-users.html.tmpl
+++ b/assets/templates/manage-users.html.tmpl
@@ -10,7 +10,6 @@
     <div class="container">
         <div class="admin-bar">
             <a href="/">&lt; Back to Home</a>
-            <a href="/create/user">Create New User</a>
         </div>
 
         <h1>Manage Users</h1>
@@ -26,6 +25,9 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td colspan="5" style="text-align: center;"><a href="/create/user">✨ Create New</a></td>
+                </tr>
                 {{ range .Users }}
                 <tr>
                     <td>{{ .ID }}</td>
