--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -59,7 +59,7 @@
                     {{ if $.IsOperator }}
                         <a href="/t/{{.TournamentID}}/edit" class="no-underline" title="Edit">✏️</a>
                         <a href="/create/tournament?template={{.TournamentID}}" class="no-underline" title="Copy">📋</a>
-                        <a href="#" class="no-underline delete-btn" title="Delete" onclick="confirmDeleteTournament('{{.TournamentID}}', '{{.TournamentName}}'); return false;">❌</a>
+                        <a href="#" class="delete-btn" title="Delete" onclick="confirmDeleteTournament('{{.TournamentID}}', '{{.TournamentName}}'); return false;">❌</a>
                     {{ else }}
                     &nbsp;
                     {{ end }}
