--- a/assets/templates/style.css.tmpl
+++ b/assets/templates/style.css.tmpl
@@ -298,7 +298,18 @@ input[type="submit"]:hover, button:hover {
 }
 
 .delete-btn {
+    background: transparent !important;
     color: #f88 !important;
+    padding: 0 !important;
+    border: none !important;
+    cursor: pointer;
+    text-decoration: none !important;
+}
+
+.delete-btn:hover {
+    background: transparent !important;
+    color: #faa !important;
+    text-decoration: none !important;
 }
 
 .modal {
