--- a/assets/templates/manage-users.html.tmpl
+++ b/assets/templates/manage-users.html.tmpl
@@ -36,7 +36,7 @@
                     <td>{{ if .IsOperator }}&#x2705;{{ else }}&nbsp;{{ end }}</td>
                     <td>
                         <a href="/manage/user/{{ .ID }}/edit" class="no-underline" title="Edit">✏️</a>
-                        <a href="#" class="no-underline" style="color:#f88;" title="Delete" onclick="showDeleteModal('{{ .Nick }}', {{ .ID }})">❌</a>
+                        <a href="#" class="delete-btn" title="Delete" onclick="showDeleteModal('{{ .Nick }}', {{ .ID }})">❌</a>
                     </td>
                 </tr>
                 {{ end }}
